# tokenhelm-prompt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
docs/: api-reference.md  architecture.md  examples.md  migration.md
scripts/: release_smoke_test.py
specs/001-prompt-intelligence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prompt-intelligence/checklists/: requirements.md
specs/001-prompt-intelligence/contracts/: analytics.md  cli.md  registry.md  tracker.md
src/tokenhelm_prompt/: __init__.py
src/tokenhelm_prompt/analytics/: __init__.py  aggregate.py  export.py  store.py
src/tokenhelm_prompt/cli/: __init__.py  main.py
src/tokenhelm_prompt/context/: __init__.py  prompt_context.py
src/tokenhelm_prompt/integrations/: __init__.py  crewai.py  google_adk.py  (+4 more)
tests/: conftest.py
tests/benchmark/: test_memory.py  test_overhead.py
tests/concurrency/: test_async_isolation.py
tests/integration/: test_analytics.py  test_attribution.py  test_backcompat.py  test_cli_extra.py  test_cli_registry.py  test_privacy.py  test_registry_contract.py
tests/streaming/: test_streaming.py
tests/unit/: test_analytics_edge.py  test_coverage_extra.py  test_hashing.py  test_lazy_imports.py  test_nested_context.py  test_tracker.py  test_versioning.py
(+16 files in other folders)
